--- a/Codigo_principal.ipynb
+++ b/Codigo_principal.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +644,7 @@
        "[1614 rows x 41 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,11 +769,429 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#celda lidia"
+    "#celda lidia\n",
+    "\n",
+    "\n",
+    "#Seleccionamos los 10 primeros\n",
+    "df_col_1=df.iloc[:, 0:11]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Attrition</th>\n",
+       "      <th>BusinessTravel</th>\n",
+       "      <th>DailyRate</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>DistanceFromHome</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>EducationField</th>\n",
+       "      <th>employeecount</th>\n",
+       "      <th>employeenumber</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>684,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>162,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>52</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>699,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Life Sciences</td>\n",
+       "      <td>1</td>\n",
+       "      <td>259,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>No</td>\n",
+       "      <td>travel_rarely</td>\n",
+       "      <td>532,0$</td>\n",
+       "      <td>Research &amp; Development</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Technical Degree</td>\n",
+       "      <td>1</td>\n",
+       "      <td>319,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>47</td>\n",
+       "      <td>No</td>\n",
+       "      <td>travel_rarely</td>\n",
+       "      <td>359,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>46</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1319,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Technical Degree</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609</th>\n",
+       "      <td>1609</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>travel_rarely</td>\n",
+       "      <td>530,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Life Sciences</td>\n",
+       "      <td>1</td>\n",
+       "      <td>967,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1610</th>\n",
+       "      <td>1610</td>\n",
+       "      <td>45</td>\n",
+       "      <td>No</td>\n",
+       "      <td>non-travel</td>\n",
+       "      <td>805,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>972,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1611</th>\n",
+       "      <td>1611</td>\n",
+       "      <td>39</td>\n",
+       "      <td>No</td>\n",
+       "      <td>travel_rarely</td>\n",
+       "      <td>903,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1612</th>\n",
+       "      <td>1612</td>\n",
+       "      <td>36</td>\n",
+       "      <td>No</td>\n",
+       "      <td>non-travel</td>\n",
+       "      <td>1229,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Technical Degree</td>\n",
+       "      <td>1</td>\n",
+       "      <td>990,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1613</th>\n",
+       "      <td>1613</td>\n",
+       "      <td>46</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>566,0$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1614 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0 Age Attrition BusinessTravel DailyRate  \\\n",
+       "0              0  51        No            NaN    684,0$   \n",
+       "1              1  52        No            NaN    699,0$   \n",
+       "2              2  42        No  travel_rarely    532,0$   \n",
+       "3              3  47        No  travel_rarely    359,0$   \n",
+       "4              4  46        No            NaN   1319,0$   \n",
+       "...          ...  ..       ...            ...       ...   \n",
+       "1609        1609  36       Yes  travel_rarely    530,0$   \n",
+       "1610        1610  45        No     non-travel    805,0$   \n",
+       "1611        1611  39        No  travel_rarely    903,0$   \n",
+       "1612        1612  36        No     non-travel   1229,0$   \n",
+       "1613        1613  46        No            NaN    566,0$   \n",
+       "\n",
+       "                    Department  DistanceFromHome  Education    EducationField  \\\n",
+       "0                          NaN                 6          3               NaN   \n",
+       "1                          NaN                 1          4     Life Sciences   \n",
+       "2      Research & Development                  4          2  Technical Degree   \n",
+       "3                          NaN                 2          4           Medical   \n",
+       "4                          NaN                 3          3  Technical Degree   \n",
+       "...                        ...               ...        ...               ...   \n",
+       "1609                       NaN                 3          1     Life Sciences   \n",
+       "1610                       NaN                 4          2               NaN   \n",
+       "1611                       NaN               -13          5               NaN   \n",
+       "1612                       NaN                 8          4  Technical Degree   \n",
+       "1613                       NaN                 7          2           Medical   \n",
+       "\n",
+       "      employeecount employeenumber  \n",
+       "0                 1          162,0  \n",
+       "1                 1          259,0  \n",
+       "2                 1          319,0  \n",
+       "3                 1            NaN  \n",
+       "4                 1            NaN  \n",
+       "...             ...            ...  \n",
+       "1609              1          967,0  \n",
+       "1610              1          972,0  \n",
+       "1611              1            NaN  \n",
+       "1612              1          990,0  \n",
+       "1613              1            NaN  \n",
+       "\n",
+       "[1614 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_col_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['162,0', '259,0', '319,0', ..., '2012,0', '2023,0', '2040,0'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_col_1[\"employeenumber\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# otra manera de cambiar los nombres de las columnas.  porque no se guardan todos los cambios?? -- tiene que ir todo en la misma linea!!\n",
+    "#df_col_1 = df.rename(columns={'DailyRate': 'daily_rate'})\n",
+    "#df_col_1= df.rename(columns={\"Age\":\"age\"})\n",
+    "#df_col_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1614 entries, 0 to 1613\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   Unnamed: 0        1614 non-null   int64 \n",
+      " 1   Age               1614 non-null   object\n",
+      " 2   Attrition         1614 non-null   object\n",
+      " 3   BusinessTravel    842 non-null    object\n",
+      " 4   DailyRate         1614 non-null   object\n",
+      " 5   Department        302 non-null    object\n",
+      " 6   DistanceFromHome  1614 non-null   int64 \n",
+      " 7   Education         1614 non-null   int64 \n",
+      " 8   EducationField    869 non-null    object\n",
+      " 9   employeecount     1614 non-null   int64 \n",
+      "dtypes: int64(4), object(6)\n",
+      "memory usage: 126.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_col_1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['unnamed: 0',\n",
+       " 'age',\n",
+       " 'attrition',\n",
+       " 'business_travel',\n",
+       " 'daily_rate',\n",
+       " 'department',\n",
+       " 'distance_from_home',\n",
+       " 'education',\n",
+       " 'education_field',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#codigo de MArga para limpiar los nombres de la columnaas\n",
+    "colum_limpias=[]\n",
+    "for columna in df_col_1:\n",
+    "    patron='[A-Z][^A-Z]*'\n",
+    "    columna_limpia=re.findall(patron,columna)\n",
+    "    columna_limpia1='_'.join(columna_limpia)\n",
+    "    columna_min=columna_limpia1.lower()\n",
+    "    colum_limpias.append(columna_min)\n",
+    "df_col_1= colum_limpias\n",
+    "df_col_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['51' '52' '42' '47' '46' '48' '59' '41' '56' '38' '55' '40' '58' '35'\n",
+      " '45' '33' '36' '34' 'forty-seven' '53' '43' '60' '32' '37' '49' '39' '50'\n",
+      " '44' '30' 'fifty-eight' '29' '31' '54' '57' '27' 'thirty-six' '28' '26'\n",
+      " 'fifty-five' '25' 'fifty-two' 'thirty-one' '24' 'thirty' '23' '22' '21'\n",
+      " '20' 'twenty-six' '19' 'thirty-seven' '18' 'thirty-two' 'twenty-four']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"Age\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#pasamos la primera columna que es un objeto a numero entero\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#df_col_1\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#df_col_1['age'] = pd.to_numeric(df_col_1['age'])\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# no se puede pasar porque no todos los valores son numeros.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# convertir los valores que no son nmumeros a Nan\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Usar pd.to_numeric con errors='coerce' para convertir valores no numéricos a NaN\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m df_col_1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_numeric(\u001b[43mdf_col_1\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mage\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInt64\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Ahora los valores no numéricos son NaN. Si se desea, estos NaN se pueden rellenar o eliminar\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Rellenar NaN con un valor específico, por ejemplo, la media\u001b[39;00m\n\u001b[1;32m     11\u001b[0m df_col_1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mfillna(df_col_1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean(), inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "#pasamos la primera columna que es un objeto a numero entero\n",
+    "#df_col_1\n",
+    "#df_col_1['age'] = pd.to_numeric(df_col_1['age'])\n",
+    "# no se puede pasar porque no todos los valores son numeros.\n",
+    "# convertir los valores que no son nmumeros a Nan\n",
+    "# Usar pd.to_numeric con errors='coerce' para convertir valores no numéricos a NaN\n",
+    "df_col_1['age'] = pd.to_numeric(df_col_1['age'], errors='coerce').astype('Int64')\n",
+    "\n",
+    "# Ahora los valores no numéricos son NaN. Si se desea, estos NaN se pueden rellenar o eliminar\n",
+    "# Rellenar NaN con un valor específico, por ejemplo, la media\n",
+    "df_col_1['age'].fillna(df_col_1['age'].mean(), inplace=True)\n"
    ]
   }
  ],
@@ -792,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
