--- a/Codigo_principal.ipynb
+++ b/Codigo_principal.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +644,7 @@
        "[1614 rows x 41 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -732,11 +733,306 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EnvironmentSatisfaction</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>HourlyRate</th>\n",
+       "      <th>JobInvolvement</th>\n",
+       "      <th>JobLevel</th>\n",
+       "      <th>JobRole</th>\n",
+       "      <th>JobSatisfaction</th>\n",
+       "      <th>MaritalStatus</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>MonthlyRate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>resEArch DIREcToR</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19537,0</td>\n",
+       "      <td>6462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ManAGeR</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19999,0</td>\n",
+       "      <td>5678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ManaGER</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>19232,0</td>\n",
+       "      <td>4933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ReseArCH DIrECtOr</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>17169,0</td>\n",
+       "      <td>26703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sAleS EXECUtIve</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>saLEs ExeCUTiVe</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>10325,0</td>\n",
+       "      <td>5518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1610</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>LAboRaTOry tECHNiCIAn</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4447,0</td>\n",
+       "      <td>23163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1611</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>sAlES ExECUTivE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1612</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>SaLes ExecUtIVe</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1613</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>mAnUfactURInG DiRECTOr</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10845,0</td>\n",
+       "      <td>24208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1614 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      EnvironmentSatisfaction  Gender HourlyRate  JobInvolvement  JobLevel  \\\n",
+       "0                           1       0         51               3         5   \n",
+       "1                           3       0         65               2         5   \n",
+       "2                           3       0         58               3         5   \n",
+       "3                           1       1         82               3         4   \n",
+       "4                           1       1         45               4         4   \n",
+       "...                       ...     ...        ...             ...       ...   \n",
+       "1609                        3       0         51               2         3   \n",
+       "1610                        3       0         57               3         2   \n",
+       "1611                       13       0         41               4         3   \n",
+       "1612                        1       0         84               3         2   \n",
+       "1613                        4       0         75               3         3   \n",
+       "\n",
+       "                       JobRole  JobSatisfaction MaritalStatus MonthlyIncome  \\\n",
+       "0           resEArch DIREcToR                 3           NaN       19537,0   \n",
+       "1                     ManAGeR                 3           NaN       19999,0   \n",
+       "2                     ManaGER                 4       Married       19232,0   \n",
+       "3           ReseArCH DIrECtOr                 3       Married       17169,0   \n",
+       "4             sAleS EXECUtIve                 1      Divorced           NaN   \n",
+       "...                        ...              ...           ...           ...   \n",
+       "1609          saLEs ExeCUTiVe                 4       Married       10325,0   \n",
+       "1610    LAboRaTOry tECHNiCIAn                 2           NaN        4447,0   \n",
+       "1611          sAlES ExECUTivE                 3        Single           NaN   \n",
+       "1612          SaLes ExecUtIVe                 4      Divorced           NaN   \n",
+       "1613   mAnUfactURInG DiRECTOr                 3           NaN       10845,0   \n",
+       "\n",
+       "      MonthlyRate  \n",
+       "0            6462  \n",
+       "1            5678  \n",
+       "2            4933  \n",
+       "3           26703  \n",
+       "4            7739  \n",
+       "...           ...  \n",
+       "1609         5518  \n",
+       "1610        23163  \n",
+       "1611         2560  \n",
+       "1612        25952  \n",
+       "1613        24208  \n",
+       "\n",
+       "[1614 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#celda marga\n",
+    "#Seleccionamos celdadas - enviroment satisfaction-monthly rates \n",
+    "#a traves, de df.info, tenemos información sobre las columnas:\n",
+    "df_columnas_parte_2=df_data.loc[:, 'EnvironmentSatisfaction':'MonthlyRate']\n",
+    "df_columnas_parte_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LIMPIEZA DE COLUMNAS:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['environment_satisfaction',\n",
+       " 'gender',\n",
+       " 'hourly_rate',\n",
+       " 'job_involvement',\n",
+       " 'job_level',\n",
+       " 'job_role',\n",
+       " 'job_satisfaction',\n",
+       " 'marital_status',\n",
+       " 'monthly_income',\n",
+       " 'monthly_rate']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colum_limpias=[]\n",
+    "for columna in df_columnas_parte_2:\n",
+    "    patron='[A-Z][^A-Z]*'\n",
+    "    columna_limpia=re.findall(patron,columna)\n",
+    "    columna_limpia1='_'.join(columna_limpia)\n",
+    "    columna_min=columna_limpia1.lower()\n",
+    "    colum_limpias.append(columna_min)\n",
+    "colum_limpias"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#celda marga"
+    "#Hay datos nulos?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#INFOPRMACION QUE NOS INTERESA CAMBIAR:\n"
    ]
   },
   {
@@ -792,7 +1088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
