añadido codigo para insercion de datos en las tablas

--- a/fase3-creacion-bbdd.ipynb
+++ b/fase3-creacion-bbdd.ipynb
@@ -128,6 +128,74 @@
     "    print(\"SQLSTATE\", err.sqlstate)\n",
     "    print(\"Message\", err.msg) \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INSERTAR DATOS EN LAS TABLAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnx = mysql.connector.connect(user='root', password='AlumnaAdalab',\n",
+    "                              host='127.0.0.1', database='#############')\n",
+    "\n",
+    "\n",
+    "mycursor = cnx.cursor()\n",
+    "\n",
+    "# Leer el archivo CSV\n",
+    "data = pd.read_csv (r\"##################.csv\")\n",
+    "\n",
+    "# Crear la conexión a la base de datos usando SQLAlchemy\n",
+    "engine = create_engine('mysql+mysqlconnector://root:AlumnaAdalab@127.0.0.1/proyecto_peliculas')\n",
+    "\n",
+    "# Insertar los datos del DataFrame en la tabla MySQL\n",
+    "data.to_sql('####### nombre de la tabla ########', engine, if_exists='append', index=False)\n",
+    "\n",
+    "print(\"Datos insertados exitosamente\")"
+   ]
   }
  ],
  "metadata": {
