--- a/Fase4-AB-Testing.ipynb
+++ b/Fase4-AB-Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_testing=pd.read_csv(r\"C:\\Users\\silvi\\Desktop\\Adalab\\proyecto-da-promo-H-modulo-3-team-3-DataMinds\\hr_data_final.csv\")"
+    "#df_testing=pd.read_csv(r\"C:\\Users\\silvi\\Desktop\\Adalab\\proyecto-da-promo-H-modulo-3-team-3-DataMinds\\hr_data_final.csv\")\n",
+    "df_testing=pd.read_csv(r\"/Users/lydiafrailemartin/Desktop/ejercicios adalab/proyectos/proyecto-da-promo-H-modulo-3-team-3-DataMinds/hr_data_final.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>162</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>51.0</td>\n",
        "      <td>3</td>\n",
@@ -150,7 +151,7 @@
        "      <td>Life sciences</td>\n",
        "      <td>1.0</td>\n",
        "      <td>259</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>65.0</td>\n",
        "      <td>2</td>\n",
@@ -187,7 +188,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>319</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>58.0</td>\n",
        "      <td>3</td>\n",
@@ -224,7 +225,7 @@
        "      <td>Medical</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>82.0</td>\n",
        "      <td>3</td>\n",
@@ -261,7 +262,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>45.0</td>\n",
        "      <td>4</td>\n",
@@ -335,7 +336,7 @@
        "      <td>Life sciences</td>\n",
        "      <td>1.0</td>\n",
        "      <td>967</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>51.0</td>\n",
        "      <td>2</td>\n",
@@ -372,7 +373,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>972</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>57.0</td>\n",
        "      <td>3</td>\n",
@@ -409,7 +410,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>41.0</td>\n",
        "      <td>4</td>\n",
@@ -446,7 +447,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>990</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>84.0</td>\n",
        "      <td>3</td>\n",
@@ -483,7 +484,7 @@
        "      <td>Medical</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Male</td>\n",
        "      <td>75.0</td>\n",
        "      <td>3</td>\n",
@@ -541,17 +542,17 @@
        "1613                 7.0          2           Medical             1.0   \n",
        "\n",
        "     Employee_number  Environment_satisfaction  Gender  Hourly_rate  \\\n",
-       "0                162                       1.0    Male         51.0   \n",
-       "1                259                       3.0    Male         65.0   \n",
-       "2                319                       3.0    Male         58.0   \n",
-       "3            Unknown                       1.0  Female         82.0   \n",
-       "4            Unknown                       1.0  Female         45.0   \n",
+       "0                162                         1    Male         51.0   \n",
+       "1                259                         3    Male         65.0   \n",
+       "2                319                         3    Male         58.0   \n",
+       "3            Unknown                         1  Female         82.0   \n",
+       "4            Unknown                         1  Female         45.0   \n",
        "...              ...                       ...     ...          ...   \n",
-       "1609             967                       3.0    Male         51.0   \n",
-       "1610             972                       3.0    Male         57.0   \n",
-       "1611         Unknown                       2.0    Male         41.0   \n",
-       "1612             990                       1.0    Male         84.0   \n",
-       "1613         Unknown                       4.0    Male         75.0   \n",
+       "1609             967                         3    Male         51.0   \n",
+       "1610             972                         3    Male         57.0   \n",
+       "1611         Unknown                         1    Male         41.0   \n",
+       "1612             990                         1    Male         84.0   \n",
+       "1613         Unknown                         4    Male         75.0   \n",
        "\n",
        "      Job_involvement  Job_level                Job_role  Job_satisfaction  \\\n",
        "0                   3          5       Research director                 3   \n",
@@ -634,7 +635,7 @@
        "[1614 rows x 34 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +668,7 @@
       " 7   Education_field             1614 non-null   object \n",
       " 8   Employee_count              1614 non-null   float64\n",
       " 9   Employee_number             1614 non-null   object \n",
-      " 10  Environment_satisfaction    1605 non-null   float64\n",
+      " 10  Environment_satisfaction    1614 non-null   int64  \n",
       " 11  Gender                      1614 non-null   object \n",
       " 12  Hourly_rate                 1614 non-null   float64\n",
       " 13  Job_involvement             1614 non-null   int64  \n",
@@ -691,7 +692,7 @@
       " 31  Years_with_curr_manager     1614 non-null   int64  \n",
       " 32  Date_birth                  1614 non-null   int64  \n",
       " 33  Remote_work                 1614 non-null   object \n",
-      "dtypes: float64(10), int64(14), object(10)\n",
+      "dtypes: float64(9), int64(15), object(10)\n",
       "memory usage: 428.8+ KB\n"
      ]
     }
@@ -702,16 +703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 4, 1, 2], dtype=int64)"
+       "array([3, 4, 1, 2])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2134,7 +2135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
