--- a/Fase4-AB-Testing.ipynb
+++ b/Fase4-AB-Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "[1614 rows x 34 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "array([3, 4, 1, 2])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>162</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>51.0</td>\n",
        "      <td>3</td>\n",
@@ -851,7 +851,7 @@
        "      <td>Life sciences</td>\n",
        "      <td>1.0</td>\n",
        "      <td>259</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>65.0</td>\n",
        "      <td>2</td>\n",
@@ -889,7 +889,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>319</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>58.0</td>\n",
        "      <td>3</td>\n",
@@ -927,7 +927,7 @@
        "      <td>Medical</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>82.0</td>\n",
        "      <td>3</td>\n",
@@ -965,7 +965,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>45.0</td>\n",
        "      <td>4</td>\n",
@@ -1041,7 +1041,7 @@
        "      <td>Life sciences</td>\n",
        "      <td>1.0</td>\n",
        "      <td>967</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>51.0</td>\n",
        "      <td>2</td>\n",
@@ -1079,7 +1079,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>972</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>57.0</td>\n",
        "      <td>3</td>\n",
@@ -1117,7 +1117,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>41.0</td>\n",
        "      <td>4</td>\n",
@@ -1141,7 +1141,7 @@
        "      <td>7</td>\n",
        "      <td>1984</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>3.00</td>\n",
+       "      <td>2.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1612</th>\n",
@@ -1155,7 +1155,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>990</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>84.0</td>\n",
        "      <td>3</td>\n",
@@ -1193,7 +1193,7 @@
        "      <td>Medical</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Male</td>\n",
        "      <td>75.0</td>\n",
        "      <td>3</td>\n",
@@ -1252,17 +1252,17 @@
        "1613                 7.0          2           Medical             1.0   \n",
        "\n",
        "     Employee_number  Environment_satisfaction  Gender  Hourly_rate  \\\n",
-       "0                162                       1.0    Male         51.0   \n",
-       "1                259                       3.0    Male         65.0   \n",
-       "2                319                       3.0    Male         58.0   \n",
-       "3            Unknown                       1.0  Female         82.0   \n",
-       "4            Unknown                       1.0  Female         45.0   \n",
+       "0                162                         1    Male         51.0   \n",
+       "1                259                         3    Male         65.0   \n",
+       "2                319                         3    Male         58.0   \n",
+       "3            Unknown                         1  Female         82.0   \n",
+       "4            Unknown                         1  Female         45.0   \n",
        "...              ...                       ...     ...          ...   \n",
-       "1609             967                       3.0    Male         51.0   \n",
-       "1610             972                       3.0    Male         57.0   \n",
-       "1611         Unknown                       2.0    Male         41.0   \n",
-       "1612             990                       1.0    Male         84.0   \n",
-       "1613         Unknown                       4.0    Male         75.0   \n",
+       "1609             967                         3    Male         51.0   \n",
+       "1610             972                         3    Male         57.0   \n",
+       "1611         Unknown                         1    Male         41.0   \n",
+       "1612             990                         1    Male         84.0   \n",
+       "1613         Unknown                         4    Male         75.0   \n",
        "\n",
        "      Job_involvement  Job_level                Job_role  Job_satisfaction  \\\n",
        "0                   3          5       Research director                 3   \n",
@@ -1338,14 +1338,14 @@
        "...                       ...         ...         ...                    ...  \n",
        "1609                        7        1987          No                   2.67  \n",
        "1610                        8        1978         Yes                   2.33  \n",
-       "1611                        7        1984         Yes                   3.00  \n",
+       "1611                        7        1984         Yes                   2.67  \n",
        "1612                        7        1987     Unknown                   3.00  \n",
        "1613                        7        1977          No                   3.00  \n",
        "\n",
        "[1614 rows x 35 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,17 +1367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.33, 3.67, 2.  , 3.33, 2.67, 1.67, 3.  , 4.33, 4.  , 1.33, 3.5 ,\n",
-       "       1.  , 2.5 ])"
+       "array([2.33, 3.67, 2.  , 3.33, 2.67, 1.67, 3.  , 4.  , 1.33, 1.  ])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1498,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>162</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>51.0</td>\n",
        "      <td>3</td>\n",
@@ -1538,7 +1537,7 @@
        "      <td>Life sciences</td>\n",
        "      <td>1.0</td>\n",
        "      <td>259</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>65.0</td>\n",
        "      <td>2</td>\n",
@@ -1577,7 +1576,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>319</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>58.0</td>\n",
        "      <td>3</td>\n",
@@ -1616,7 +1615,7 @@
        "      <td>Medical</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>82.0</td>\n",
        "      <td>3</td>\n",
@@ -1655,7 +1654,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>45.0</td>\n",
        "      <td>4</td>\n",
@@ -1733,7 +1732,7 @@
        "      <td>Life sciences</td>\n",
        "      <td>1.0</td>\n",
        "      <td>967</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>51.0</td>\n",
        "      <td>2</td>\n",
@@ -1772,7 +1771,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>972</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Male</td>\n",
        "      <td>57.0</td>\n",
        "      <td>3</td>\n",
@@ -1811,7 +1810,7 @@
        "      <td>Unknown</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>41.0</td>\n",
        "      <td>4</td>\n",
@@ -1835,8 +1834,8 @@
        "      <td>7</td>\n",
        "      <td>1984</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>A</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1612</th>\n",
@@ -1850,7 +1849,7 @@
        "      <td>Technical degree</td>\n",
        "      <td>1.0</td>\n",
        "      <td>990</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>84.0</td>\n",
        "      <td>3</td>\n",
@@ -1889,7 +1888,7 @@
        "      <td>Medical</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Male</td>\n",
        "      <td>75.0</td>\n",
        "      <td>3</td>\n",
@@ -1949,17 +1948,17 @@
        "1613                 7.0          2           Medical             1.0   \n",
        "\n",
        "     Employee_number  Environment_satisfaction  Gender  Hourly_rate  \\\n",
-       "0                162                       1.0    Male         51.0   \n",
-       "1                259                       3.0    Male         65.0   \n",
-       "2                319                       3.0    Male         58.0   \n",
-       "3            Unknown                       1.0  Female         82.0   \n",
-       "4            Unknown                       1.0  Female         45.0   \n",
+       "0                162                         1    Male         51.0   \n",
+       "1                259                         3    Male         65.0   \n",
+       "2                319                         3    Male         58.0   \n",
+       "3            Unknown                         1  Female         82.0   \n",
+       "4            Unknown                         1  Female         45.0   \n",
        "...              ...                       ...     ...          ...   \n",
-       "1609             967                       3.0    Male         51.0   \n",
-       "1610             972                       3.0    Male         57.0   \n",
-       "1611         Unknown                       2.0    Male         41.0   \n",
-       "1612             990                       1.0    Male         84.0   \n",
-       "1613         Unknown                       4.0    Male         75.0   \n",
+       "1609             967                         3    Male         51.0   \n",
+       "1610             972                         3    Male         57.0   \n",
+       "1611         Unknown                         1    Male         41.0   \n",
+       "1612             990                         1    Male         84.0   \n",
+       "1613         Unknown                         4    Male         75.0   \n",
        "\n",
        "      Job_involvement  Job_level                Job_role  Job_satisfaction  \\\n",
        "0                   3          5       Research director                 3   \n",
@@ -2035,7 +2034,7 @@
        "...                       ...         ...         ...                    ...   \n",
        "1609                        7        1987          No                   2.67   \n",
        "1610                        8        1978         Yes                   2.33   \n",
-       "1611                        7        1984         Yes                   3.00   \n",
+       "1611                        7        1984         Yes                   2.67   \n",
        "1612                        7        1987     Unknown                   3.00   \n",
        "1613                        7        1977          No                   3.00   \n",
        "\n",
@@ -2048,14 +2047,14 @@
        "...         ...  \n",
        "1609          B  \n",
        "1610          B  \n",
-       "1611          A  \n",
+       "1611          B  \n",
        "1612          A  \n",
        "1613          A  \n",
        "\n",
        "[1614 rows x 36 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,11 +2072,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_testing[\"Rotation_rate\"]=df_testing[\"Attrition\"]/"
+    "#calcular\n",
+    "#tasa_rotacion = (empleados_que_dejaron / total_empleados) * 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "706"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total de personas en el grupo A(satisfacion >= 3)\n",
+    "total_A = (df_testing[\"Group_test\"] == \"A\").sum()\n",
+    "total_A\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "259"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total de personas que si dejaron la empresa (ambos grupos)\n",
+    "df_testing_A = df_testing[df_testing['Attrition'] == 'Yes']\n",
+    "df_testing_A['Attrition'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "87"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total de numero de personas que dejeron la empresa del grupo A\n",
+    "group_a_attrition = df_testing[(df_testing[\"Group_test\"] == \"A\") & (df_testing[\"Attrition\"] == \"Yes\")]\n",
+    "total_attrition_A = group_a_attrition.shape[0]\n",
+    "total_attrition_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.322946175637393"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#calcular tasa de rotacion \n",
+    "tasa_rotacion = (total_attrition_A / total_A )* 100\n",
+    "tasa_rotacion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "908"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total de personas en el grupo B(satisfacion < 3)\n",
+    "total_B = (df_testing[\"Group_test\"] == \"B\").sum()\n",
+    "total_B\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "259"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total de personas que si dejaron la empresa entre ambos grupos!\n",
+    "df_testing_B = df_testing[df_testing['Attrition'] == 'Yes']\n",
+    "df_testing_B['Attrition'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#total de numero de personas que dejeron la empresa del grupo b\n",
+    "group_b_attrition = df_testing[(df_testing[\"Group_test\"] == \"B\") & (df_testing[\"Attrition\"] == \"Yes\")]\n",
+    "total_attrition_B = group_b_attrition.shape[0]\n",
+    "total_attrition_B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.94273127753304"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#calcular tasa de rotacion grupo B\n",
+    "tasa_rotacion = (total_attrition_B / total_B )* 100\n",
+    "tasa_rotacion"
    ]
   },
   {
